--- a/article/20161112/闭包的理解.html
+++ b/article/20161112/闭包的理解.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <meta name="keywords" content="闭包,Javascript," />
-    <link rel="shortcut icon" type="image/x-icon" href="../../../item/images/bitbug_favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="../bitbug_favicon.ico" />
     <meta name="description" content="&amp;#160; &amp;#160; &amp;#160; &amp;#160;作为一个JS的初学者，闭包和作用域感觉一直都很难弄。JavaScript高级程序设计上关于闭包的内容很少，这里参考前人的博客，对于JS中的闭包做一个理解。">
     <meta property="og:type" content="article">
     <meta property="og:title" content="Js中闭包的理解">
@@ -16,7 +16,6 @@
     <meta name="twitter:title" content="Js中闭包的理解">
     <meta name="twitter:description" content="&amp;#160; &amp;#160; &amp;#160; &amp;#160;作为一个JS的初学者，闭包和作用域感觉一直都很难弄。JavaScript高级程序设计上关于闭包的内容很少，这里参考前人的博客，对于JS中的闭包做一个理解。">
     <title> Js中闭包的理解 | datura </title>
-    <link rel="stylesheet" type="text/css" href="../../../item/css/base.css" />
     <link rel="stylesheet" type="text/css" href="bibao.css">
 </head>
 <body>
